--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>网易云音乐 API</title>
+  <title>HappyKing-网易云音乐-API</title>
+  <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
